Add some example URLs

--- a/templates/raintale/form.html
+++ b/templates/raintale/form.html
@@ -18,7 +18,8 @@
     <p>
         <label>
             URLs of some archived web pages<br>
-            <textarea id="urls" name="urls" style="width: 600px; height: 150px"></textarea>
+            <textarea id="urls" name="urls" style="width: 600px; height: 150px">https://webarchive.nla.gov.au/awa/20060821035730/http://www.example.com/
+http://web.archive.org/web/20130430200730/http://www.example.org/</textarea>
         </label>
     </p>
     <p>
